@@ -19,6 +19,7 @@ version 0.99.5-rc1 - 12-Nov-2010
 . [FIX] RenderTexture: removed unneeded and dangerous assert in getUIImageAsDataFromBuffer
 . [FIX] RenderTexture: fixed important memory leak when saving images
 . [FIX] SpriteBatchNode: improved performance when drawing the batch (issue #824)
+. [FIX] SpriteBatchNode: children sprites use the visible property correctly (issue #665)
 . [FIX] TextureCache: Improved loading time of cached PVR images (issue #998)
 . [FIX] Texture2D: addPVRTCImage: -> addPVRImage: since it also loads non-compressed PVR images
 . [FIX] Texture2D: Use 32-bit textures when creating labels on ARM_NEON hardware. Performance improvement.
